--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
-./run/
-./datasets/
+run/
+datasets/
+__pycache__/
+dataloaders/__pycache__/
+dataloaders/datasets/__pycache__/
+modeling/__pycache__/
+modeling/sync_batchnorm/__pycache__/
+utils/__pycache__/
+wandb/
+output*.txt
